--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -246,7 +246,7 @@ div.mel {
 }
 
 #location-syd a {
-	background: url(../graphics/map_marlborough.jpg) 50% 50%;
+	background: url(../graphics/map_mojo.jpg) 50% 50%;
 }
 
 #location-mel a {
