Added web directions as a sponsor

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -201,6 +201,14 @@ div.mel {
 	margin-top: 85px;
 }
 
+#sponsors-webdirections {
+	background-color: white;
+}
+
+#sponsors-webdirections img {
+	margin-top: 85px;
+}
+
 #sponsors-bugherd {
 	background-color: rgb(34, 34, 34);
 }
